<resources>
    <string name="app_name">team_16</string>
    <string name="followers">Followers</string>

    <string name="accepted">Accepted</string>
    <string name="pending">Pending</string>

    <string name="search_for_users">Search for users…</string>

    <string name="no_follow_requests">No follow requests</string>

    <string name="remove">Remove</string>
    <string name="profile_picture" />
    <string name="username_placeholder" />
    <string name="user_id_placeholder" />
    <string name="mood_placeholder" />
    <string name="accept">Accept Request</string>
    <string name="reject">Reject Request</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <!-- Strings for interactable elements on AddMood screen -->
    <string name="track_your_mood_text">Track Your Mood</string>
    <string name="how_are_you_feeling_text">How are you feeling?</string>
    <string name="anger_text">😡 Angry</string>
    <string name="confusion_text">🤔 Confused</string>
    <string name="disgust_text">🤮 Disgusted</string>
    <string name="fear_text">😰 Scared</string>
    <string name="happiness_text">😊 Happy</string>
    <string name="sadness_text">☹️ Sad</string>
    <string name="shame_text">😔 Ashamed</string>
    <string name="surprise_text">😳 Surprised</string>
    <string name="trigger_optional_text">Reason</string>
    <string name="word_limit_text">Max 3 words, 20 characters</string>
    <string name="who_were_you_with_text">Who were you with?</string>
    <string name="alone_text">Alone</string>
    <string name="one_person_text">One Person</string>
    <string name="two_person_text">Two People</string>
    <string name="crowd_text">Crowd</string>
    <string name="add_photo_text">Add a photo (optional)</string>
    <string name="take_photo_text">Take Photo</string>
    <string name="choose_photo_text">Choose Photo</string>
    <string name="add_location_text">Add Location</string>
    <string name="save_mood_text">Save Mood</string>
    <string name="delete_entry_text">Delete Entry</string>

    <string name="user_handle">/@UserHandle</string>
    <string name="content_area_description">Main content area</string>
    <string name="feed_content_description">Mood feed list</string>
    <string name="maps_content_description">Maps showing mood data</string>





    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_following">You\'re not following anyone yet</string>
    <string name="filter">Filter</string>
    <string name="_20_characters_left_3_words_left">20 characters left | 3 words left</string>
    <string name="trigger_reason">Trigger Reason</string>
    <string name="get_started">Get Started</string>
    <string name="copyright">© 2024 Team_16. All rights reserved</string>
    <string name="user_name">User Name</string>


    <!-- Mood Details Fragment -->
    <string name="mood_happy">Happy</string>
    <string name="emoji_happy">😊</string>
    <string name="happy_emoji_description">Happy emoji</string>
    <string name="time_ago_format">- 1 hour ago</string>
    <string name="top_banner_background">Banner background</string>
    <string name="profile_picture_description">Profile picture</string>
    <string name="mood_image_description">Mood related image</string>
    <string name="placeholder_full_name">First Last</string>
    <string name="placeholder_username">-@username</string>
    <string name="mood_description_placeholder">Text (20 Characters)</string>
    <string name="with_people_format">With: # Of People</string>
    <string name="post_time_location_format">06:50  2025–03–02  Vancouver, BC</string>
    <string name="unknown_user">Unknown User</string>
    <string name="unknown">\@unknown</string>
    <string name="loading">Loading…</string>

    <!-- Filter Fragment Strings -->
    <string name="filter_trigger_reason">Search for trigger reason</string>
    <string name="search_icon_description">Search icon</string>
    <string name="filter_icon_description">Filter icon</string>
    <string name="no_filters_selected">No Filters Selected</string>
    <string name="select_filters_instruction">Select filters to refine your mood history</string>
    <string name="time_period">Time Period</string>
    <string name="all_time">All Time</string>
    <string name="last_year">Last Year</string>
    <string name="last_month">Last Month</string>
    <string name="last_week">Last Week</string>
    <string name="emotional_states">Emotional States</string>
    <string name="events">Events</string>
    <string name="my_own_mood_history">My Own Mood History</string>
    <string name="events_from_people_i_follow">Events from People I Follow</string>
    <string name="nearby_events_within_5km">Nearby Events within 5km</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="location">Location</string>
    <string name="what_affected_your_mood">What Affected Your Mood</string>
    <string name="these_were_your_top_mood_influencers_this_month">These were your top mood influencers this month</string>
    <string name="your_social_connections">Your Social Connections</string>
    <string name="here_s_how_different_social_settings_affect_your_mood">Here\'s how different social settings affect your mood</string>
    <string name="open_in_spotify">Open in Spotify</string>

    <string name="mood_history">Mood History</string>
    <string name="no_mood_events">No mood events yet</string>
    <string name="add_mood">Add Mood</string>
    <string name="edit_mood">Edit Mood</string>
    <string name="mood_stats">Mood Statistics</string>
    <string name="profile">Profile</string>

    <string name="emotional_state">Emotional State</string>
    <string name="happiness">Happiness</string>
    <string name="sadness">Sadness</string>
    <string name="anger">Anger</string>
    <string name="fear">Fear</string>
    <string name="disgust">Disgust</string>
    <string name="trigger">Trigger</string>
    <string name="trigger_hint">What triggered this mood?</string>
    <string name="social_situation">Social Situation</string>
    <string name="social_situation_hint">Who were you with?</string>
    <string name="save">Save</string>

    <string name="delete">Delete</string>
    <string name="select_emotional_state">Please select an emotional state</string>
    <string name="mood_updated">Mood updated successfully</string>
    <string name="update_failed">Failed to update mood</string>
    <string name="mood_deleted">Mood deleted successfully</string>
    <string name="delete_failed">Failed to delete mood</string>

    <string name="average_mood">Average Mood</string>
    <string name="most_common_mood">Most Common Mood</string>
    <string name="total_events">Total Events</string>
    <string name="no_data">No mood data available</string>

    <string name="average_mood_format">Average Mood: %.1f</string>
    <string name="most_common_mood_format">Most Common Mood: %s</string>
    <string name="total_events_format">Total Events: %d</string>

</resources>