<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ViewFlipper
        android:id="@+id/view_flipper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@drawable/gradient_background">

                <!-- Mood Selection -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/how_are_you_feeling_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:rowCount="4"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/anger_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        android:layout_margin="2dp"
                        app:backgroundTint="#75F44336"
                        android:text="@string/anger_text" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/confusion_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        android:layout_margin="2dp"
                        app:backgroundTint="#75C084FC"
                        android:text="@string/confusion_text" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/disgust_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        android:layout_margin="2dp"
                        app:backgroundTint="#75059669"
                        android:text="@string/disgust_text" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/fear_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        android:layout_margin="2dp"
                        app:backgroundTint="#75374151"
                        android:text="@string/fear_text" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/happiness_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        android:layout_margin="2dp"
                        app:backgroundTint="#75FACC15"
                        android:text="@string/happiness_text" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/sadness_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        android:layout_margin="2dp"
                        app:backgroundTint="#7560A5FA"
                        android:text="@string/sadness_text" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/shame_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        android:layout_margin="2dp"
                        app:backgroundTint="#75F472B6"
                        android:text="@string/shame_text" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/surprise_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        android:layout_margin="2dp"
                        app:backgroundTint="#75FB923C"
                        android:text="@string/surprise_text" />

                </GridLayout>

                <!-- Trigger (Optional) -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trigger_optional_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/trigger_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="Why? (Optional)"
                    android:textColorHint="@android:color/darker_gray"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/trigger_counter"
                    android:layout_width="232dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/_20_characters_left_3_words_left"
                    android:textSize="14sp" />

                <!-- Who were you with? -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/who_were_you_with_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:rowCount="2"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/alone_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        app:backgroundTint="#ecd4d3"
                        android:text="@string/alone_text"
                        android:textColor="#573d3e" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/one_person_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        app:backgroundTint="#ecd4d3"
                        android:text="@string/one_person_text"
                        android:textColor="#573d3e" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/two_person_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        app:backgroundTint="#ecd4d3"
                        android:text="@string/two_person_text"
                        android:textColor="#573d3e" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/crowd_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        app:backgroundTint="#ecd4d3"
                        android:text="@string/crowd_text"
                        android:textColor="#573d3e" />

                </GridLayout>

                <!-- Post Type Selection -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Post Type"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:rowCount="1"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/public_post_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_margin="2dp"
                        app:backgroundTint="#ecd4d3"
                        android:text="Public"
                        android:textColor="#573d3e" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/private_post_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_margin="2dp"
                        app:backgroundTint="#ecd4d3"
                        android:text="Private"
                        android:textColor="#573d3e" />
                </GridLayout>

                <Button
                    android:id="@+id/next_button"
                    android:layout_width="146dp"
                    android:backgroundTint="#61a5fa"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:text="Next ➔" />

            </LinearLayout>
        </ScrollView>

        <!-- Step 2: Photo, Location, Save/Delete -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@drawable/gradient_background">

                <!-- Add Photo -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_photo_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/take_photo_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:backgroundTint="#ecd4d3"
                        android:text="@string/take_photo_text"
                        android:textColor="#573d3e" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/choose_photo_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:backgroundTint="#ecd4d3"
                        android:text="@string/choose_photo_text"
                        android:textColor="#573d3e" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/remove_image_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:visibility="gone"
                    app:backgroundTint="#ff6666"
                    android:text="Remove Image"
                    android:textColor="@android:color/white" />

                <!-- Add Location -->
                <!-- Add Photo -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Attach location"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_location_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:backgroundTint="#e5d7e8"
                    android:text="@string/add_location_text"
                    android:textColor="#573d3e" />

                <!-- Save Mood -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save_mood_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="20dp"
                    app:backgroundTint="#008080"
                    android:text="@string/save_mood_text"
                    android:textColor="@android:color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/delete_entry_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:backgroundTint="#f3a3a6"
                    android:text="@string/delete_entry_text"
                    android:textColor="#FF0000" />

                <Button
                    android:id="@+id/back_button"
                    android:layout_width="146dp"
                    android:layout_marginTop="30dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#61a5fa"
                    android:layout_gravity="center"
                    android:text="Back"
                    android:visibility="gone"/>


            </LinearLayout>
        </ScrollView>
    </ViewFlipper>



</LinearLayout>